@@ -1,5 +1,5 @@
 /*
- *  Copyright 2017-2023 Adobe.
+ *  Copyright 2017-2025 Adobe.
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -45,7 +45,7 @@ class S3MockStarterTest {
     try (var s3ClientV2 = s3MockApplication.createS3ClientV2()) {
       buckets = s3ClientV2.listBuckets().buckets();
     }
-    assertThat(buckets.get(0).name()).isEqualTo("bucket");
+    assertThat(buckets.getFirst().name()).isEqualTo("bucket");
 
     s3MockApplication.stop();
   }
